--- a/SinaWeibo/MainStoryboard.storyboard
+++ b/SinaWeibo/MainStoryboard.storyboard
@@ -7,7 +7,7 @@
         <!--Login View Controller-->
         <scene sceneID="LZh-UL-kBI">
             <objects>
-                <viewController id="zjv-QI-reB" customClass="LoginViewController" customModule="SinaWeibo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="zjv-QI-reB" customClass="LoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="TDA-3P-OeT"/>
                         <viewControllerLayoutGuide type="bottom" id="yJG-CP-0Ju"/>
@@ -28,7 +28,7 @@
         <!--Status View Controller-->
         <scene sceneID="IVN-Is-8WA">
             <objects>
-                <viewController id="OUw-Hv-QvG" customClass="StatusViewController" customModule="SinaWeibo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="OUw-Hv-QvG" customClass="StatusViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="eb1-9g-CrY">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -72,19 +72,27 @@
                         <viewControllerLayoutGuide type="bottom" id="1OR-rC-dwz"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="IDS-tY-qfL">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uDb-uK-a9E">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uDb-uK-a9E">
+                                <rect key="frame" x="0.0" y="65" width="320" height="459"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="uDb-uK-a9E" firstAttribute="leading" secondItem="IDS-tY-qfL" secondAttribute="leading" id="0FM-au-7so"/>
+                            <constraint firstAttribute="bottom" secondItem="uDb-uK-a9E" secondAttribute="bottom" id="K4d-yG-MbV"/>
+                            <constraint firstItem="uDb-uK-a9E" firstAttribute="top" secondItem="tkN-A4-Pob" secondAttribute="bottom" constant="1" id="kx9-Vf-HVI"/>
+                            <constraint firstAttribute="trailing" secondItem="uDb-uK-a9E" secondAttribute="trailing" id="pEr-ZZ-Rmc"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="UT5-cd-RLB"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
                     <connections>
-                        <outlet property="webView" destination="uDb-uK-a9E" id="KaD-OS-0nF"/>
+                        <outlet property="webView" destination="uDb-uK-a9E" id="gxD-NZ-CZr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LIn-2s-nZv" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -172,7 +180,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="iEl-rp-yWr">
             <objects>
-                <tabBarController storyboardIdentifier="WBTabBarController" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ZxI-L1-Kic" customClass="WBTabBarController" customModule="SinaWeibo" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="WBTabBarController" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ZxI-L1-Kic" customClass="WBTabBarController" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="NE6-rR-SlS">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
